# kernel-forge

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
archive/pmpp/vectoradd_py/: AGENTS.md  (+1 more)
benchmark_results/: matmul_L4_2026-04-21.csv  matmul_L4_22e76ce_2026-05-05.csv
common/: runner.cuh  utils.cuh
docs/: lambda-setup.md  runpod-setup.md  study-guide.tex
docs/notes/: 2026-04-27-matmul-tiled-race-discovery.md  2026-04-30-matmul-ragged-boundary-tests.md  2026-05-04-matmul-output-guard-and-perf-prediction.md
docs/specs/: 2026-04-13-gpu-learning-plan-design.md  2026-04-19-kernel-forge-design.md
kernels/cross_entropy/: 1_naive.cuh  2_fused.cuh  reference.cuh
kernels/flash_attention/: 1_naive_attention.cuh  2_flash_forward.cuh  reference.cuh
kernels/matmul/: 1_naive.cuh  2_tiled.cuh  reference.cuh
kernels/moe_dispatch/: 1_gather_scatter.cuh  reference.cuh
kernels/quantized_gemm/: 1_int4_dequant.cuh  reference.cuh
kernels/reduction/: 1_divergent.cuh  2_coalesced.cuh  reference.cuh
runners/: cross_entropy.cu  flash_attention.cu  matmul.cu  moe_dispatch.cu  quantized_gemm.cu  reduction.cu
scripts/: benchmark.sh  parse_results.py  plot.py  runpod-autokill.sh  runpod-bootstrap.sh
wiki/: arithmetic-intensity.md  blocks-and-threads.md  boundary-tiles.md  case-syncthreads-race-matmul.md  gpu-cpu-async.md  gpu-cpu-split-compilation.md  index.md  memory-coalescing.md  occupancy.md  register-tiling.md  shared-memory-banks.md  shared-memory-tiling.md  type-dispatch.md  vectorized-loads.md  warp-tiling.md  warps-and-hardware-constraints.md
(+13 files in other folders)
